# Neurocore

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: activation.rs  activations.rs  error.rs  errors.rs  layers.rs  learning.rs  lib.rs  loss.rs  main.rs  network.rs  neuron.rs  synapse.rs  tensor.rs  tests.rs
