[package]
name = "neurocore"
version = "0.1.4"
edition = "2021"
authors = ["Seleste Waithaka <waithaka.njoroge3580@gmail.com>"]
license = "MIT"
description = "Neurocore: Full-featured neural network engine in Rust, including dense layers, activation functions, forward/backward propagation, training, and serialization."
readme = "README.md"
repository = "https://github.com/seleste3580-dev/neurocore"
homepage = "https://github.com/seleste3580-dev/neurocore"
documentation = "https://docs.rs/neurocore"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
