[package]
name = "neurocore"
version = "0.1.5"
edition = "2021"
authors = ["Seleste Waithaka <waithaka.njoroge3580@gmail.com>"]
license = "MIT"
description = "Neurocore: Full-featured high-level neural network engine in Rust, including dense/LSTM layers, activations, optimizers, training, serialization, and real-time prediction."
repository = "https://github.com/seleste3580-dev/neurocore"

[dependencies]

